# ens-poc

./: CLAUDE.md  Cargo.toml  ENS-POC-Spec_1.md  README.md
examples/: nats_gallery.rs  nats_publish.rs  notify_demo.rs  notify_rich.rs  send_templates.rs
installer/: agent.toml  install.ps1  uninstall.ps1
src/: app.rs  aumid.rs  backoff.rs  config.rs  dispatch.rs  eventlog.rs  eventlog_win.rs  lib.rs  main.rs  nats.rs  notification.rs  platform.rs  render.rs  service.rs  service_runtime.rs  subject.rs
templates/: 01-instant-message.xml  02-cicd-success.xml  03-cicd-failure.xml  04-news-update.xml  05-approval-request.xml  06-incoming-call.xml  07-reminder-snooze.xml  08-progress-download.xml  09-system-alert.xml  10-rich-media.xml  11-local-images.xml  README.md  badge-count.xml  badge-glyph.xml
tests/: nats_integration.rs  windows_smoke.rs
tools/: New-AumidShortcut.ps1  README.md  publish.py
