[package]
name = "tns"
version = "0.1.0"
edition = "2024"

[lib]
name = "tns"
path = "src/lib.rs"

[[bin]]
name = "tns"
path = "src/main.rs"

[dependencies]
quick-xml = "0.36"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
async-nats = "0.35"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

[dev-dependencies]
bytes = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "UI_Notifications",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_EventLog",
] }
windows-service = "0.7"
winreg = "0.52"
