[package]
name = "tns"
version = "0.1.0"
edition = "2024"

[lib]
name = "tns"
path = "src/lib.rs"

[[bin]]
name = "tns"
path = "src/main.rs"

[profile.release]
opt-level = "z"      # optimize for size (agent is idle I/O, not CPU-bound)
lto = true           # cross-crate inlining + dead-code elimination
codegen-units = 1    # better optimization at the cost of compile time
panic = "abort"      # drop unwinding tables; SCM restarts the service on crash
strip = true         # remove symbols

[dependencies]
quick-xml = "0.36"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# NOTE: async-nats 0.35 hard-requires a rustls crypto provider (`ring`) even for
# plaintext connections, so the TLS stack can't be dropped without patching the
# crate. Left at defaults.
async-nats = "0.35"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "signal",
    "sync",
] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

# Observability (optional at runtime — layers are no-ops unless agent.toml
# configures sentry_dsn / otel_endpoint). Note: pulls in reqwest + prost, a
# notable binary-size increase.
sentry = "0.48"
sentry-tracing = "0.48"
opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
    "trace",
    "http-proto",
    "reqwest-blocking-client",
] }
tracing-opentelemetry = "0.33"

[dev-dependencies]
bytes = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "UI_Notifications",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_EventLog",
] }
windows-service = "0.7"
winreg = "0.52"
